[package]
name = "rdisp"
version = "0.1.0"
authors = ["Tom <tomvercaut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.11.3"

[dependencies.async-std]
version = "1.6.0-beta.1"
features = ["attributes"]
