[package]
name = "rdisp"
version = "0.1.0"
authors = ["Tom <tomvercaut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.11.3"
string-error = "0.1.0"

[dependencies.serde]
version = "1.0.110"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.53"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]
